# MessagePassingProjects

./: .gitignore  CMakeLists.txt  README.md
rectangle/: 2  CMakeLists.txt  CoordValidator.cpp  CoordValidator.h  MatrixBuilder.cpp  MatrixBuilder.h  README.md  RectangleDetector.cpp  RectangleDetector.h  VectorParser.cpp  VectorParser.h  config  hosts  main.cpp  main.h  runMPI.sh  test.sh  testLocal.sh  testRectangles.h
rectangle/hostfiles/: 1  10  12  14  16  18  2  20  22  4  6  8
rectangle/matrixCreation/: CoordValidator.cpp  CoordValidator.h  MatrixBuilder.cpp  MatrixBuilder.h  VectorParser.cpp  VectorParser.h
rectangle/measures/nScaling/1/: measure0.csv  measure1.csv  measure2.csv
rectangle/measures/nScaling/44/: measure.csv  measure0.csv  measure1.csv  measure2.csv  nScaling.sh  nScalingSeq.sh
rectangle/measures/nScaling/44/100/: 0
rectangle/measures/nScaling/44/12000/: 0
rectangle/measures/nScaling/44/20000/: 2
rectangle/measures/nScaling/88/: measure.csv  measure0.csv  measure1.csv  measure2.csv  nScaling.sh
rectangle/measures/nScaling/88/100/: 1  (+1 more)
rectangle/measures/processorScaling/: measure.csv
rectangle/measures/processorScaling/10000/: 0  measure.csv  processorScaling.sh
rectangle/measures/processorScaling/40000/: measure.csv  processorScaling.sh
rectangle/search/: RectangleValidator.cpp  RectangleValidator.h
rectangle/testConfigs/: TestSearch.cpp  nothingFound1  rectFound1  rectFound2  rectFound3  rectFound4  rectFound5  rectFound6  somethingElseFound1  somethingElseFound2  somethingElseFound3  somethingElseFound4  somethingElseFound5
(+56 files in other folders)
